--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@airstack/node": "^0.0.7",
     "dotenv": "^16.4.5",
     "openai": "^4.47.1"
   }
